# csinvest-ETL

./: .env.example  README.md  pyproject.toml
src/: main.py
src/application/steam/: dto.py  transformer.py
src/core/: settings.py
src/core/ets/: __init__.py  extractor.py  loader.py  pipeline.py  transformer.py
src/domain/: models.py
src/extractors/: steam_extractor.py
src/loader/: steam_loader.py
src/pipelines/: steam_pipeline.py
